--- a/.github/workflows/build.yaml
+++ b/.github/workflows/build.yaml
@@ -139,6 +139,11 @@ jobs:
             echo "image=ghcr.io/left-curve/left-curve/native-builder:amd64" >> $GITHUB_OUTPUT
             echo "arch=x86_64" >> $GITHUB_OUTPUT
           elif [[ "${{ runner.arch }}" == "ARM64" ]]; then
+            if [[ "${{ runner.os }}" == "macOS" ]]; then
+              echo "Unsupported runner: OS=${{ runner.os }}, Arch=${{ runner.arch }}, cross doesn't work with this config"
+              exit 1
+            fi
+
             echo "image=ghcr.io/left-curve/left-curve/cross-builder-amd64" >> $GITHUB_OUTPUT
             echo "arch=arm64" >> $GITHUB_OUTPUT
           else
