--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -29,6 +29,32 @@ on:
       - "**.toml"
 
 jobs:
+  format:
+    name: Format
+    runs-on: ubuntu-latest
+    steps:
+      - name: Checkout sources
+        uses: actions/checkout@v4
+
+      - uses: actions-rs/toolchain@v1
+        with:
+          toolchain: nightly
+          components: rustfmt
+          override: true
+
+      - uses: actions/cache@v4
+        with:
+          path: |
+            ${HOME}/.cargo/bin/
+            ${HOME}/.cargo/registry/index/
+            ${HOME}/.cargo/registry/cache/
+            ${HOME}/.cargo/git/db/
+            target/
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+
+      - name: Run rustfmt checks
+        run: cargo +nightly fmt --check --all
+
   test:
     needs: [format]
     name: Test + Lint
@@ -50,15 +76,25 @@ jobs:
       - name: Checkout sources
         uses: actions/checkout@v4
 
-      - name: Install toolchain
-        uses: dtolnay/rust-toolchain@stable
+      - uses: actions-rs/toolchain@v1
         with:
           toolchain: stable
           components: clippy
+          override: true
 
       # - name: Create database
       #   run: |
       #     createdb -U postgres -h postgres "$PGDATABASE"
+
+      - uses: actions/cache@v4
+        with:
+          path: |
+            ${HOME}/.cargo/bin/
+            ${HOME}/.cargo/registry/index/
+            ${HOME}/.cargo/registry/cache/
+            ${HOME}/.cargo/git/db/
+            target/
+          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
       - name: Run tests
         run: cargo test --all-features
@@ -68,63 +104,72 @@ jobs:
       - name: Run clippy
         run: cargo clippy --bins --tests --benches --examples --all-features --all-targets -- -D warnings
 
-  format:
-    name: Format
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout sources
-        uses: actions/checkout@v4
-
-      - name: Install toolchain
-        uses: dtolnay/rust-toolchain@stable
-        with:
-          toolchain: nightly
-          components: rustfmt
-
-      - name: Run rustfmt checks
-        run: cargo +nightly fmt --check --all
-
-  build-arm64:
-    needs: [test]
+  build:
+    name: Build (${{ matrix.arch }})
     runs-on: [self-hosted]
+    needs: [test]
+    strategy:
+      matrix:
+        arch: [amd64, arm64]
     permissions:
       packages: write
     steps:
       - uses: actions/checkout@v4
 
-      - name: Determine build configuration
+      - name: Set build config
         id: config
         run: |
-          if [[ "${{ runner.arch }}" == "X64" ]]; then
-            echo "image=ghcr.io/left-curve/left-curve/cross-builder:amd64" >> $GITHUB_OUTPUT
-          elif [[ "${{ runner.arch }}" == "ARM64" ]]; then
-            if [[ "${{ runner.os }}" == "macOS" ]]; then
-              echo "image=ghcr.io/left-curve/left-curve/cross-builder-arm64" >> $GITHUB_OUTPUT
-            elif [[ "${{ runner.os }}" == "Linux" ]]; then
-              # NOTE: I could use a native-builder in such case
-              echo "image=ghcr.io/left-curve/left-curve/cross-builder-arm64" >> $GITHUB_OUTPUT
+          if [[ "${{ matrix.arch }}" == "amd64" ]]; then
+            if [[ "${{ runner.arch }}" == "X64" ]]; then
+              echo "image=ghcr.io/left-curve/left-curve/native-builder:amd64" >> $GITHUB_OUTPUT
+              echo "arch=x86_64" >> $GITHUB_OUTPUT
+            elif [[ "${{ runner.arch }}" == "ARM64" ]]; then
+              if [[ "${{ runner.os }}" == "macOS" ]]; then
+                echo "Unsupported runner: OS=${{ runner.os }}, Arch=${{ runner.arch }}, cross doesn't work with this config (sadly). We should fix this."
+                exit 1
+              fi
+
+              echo "image=ghcr.io/left-curve/left-curve/cross-builder-amd64" >> $GITHUB_OUTPUT
+              echo "arch=arm64" >> $GITHUB_OUTPUT
             else
-              echo "Unsupported runner OS for ARM64: OS=${{ runner.os }}, Arch=${{ runner.arch }}"
+              echo "Unsupported runner: OS=${{ runner.os }}, Arch=${{ runner.arch }}"
               exit 1
             fi
+            echo "target=x86_64-unknown-linux-gnu" >> $GITHUB_OUTPUT
+            echo "platform=linux/amd64" >> $GITHUB_OUTPUT
+            echo "suffix=amd64" >> $GITHUB_OUTPUT
+          elif [[ "${{ matrix.arch }}" == "arm64" ]]; then
+            if [[ "${{ runner.arch }}" == "X64" ]]; then
+              echo "image=ghcr.io/left-curve/left-curve/cross-builder-arm64" >> $GITHUB_OUTPUT
+            elif [[ "${{ runner.arch }}" == "ARM64" ]]; then
+              if [[ "${{ runner.os }}" == "macOS" ]]; then
+                echo "image=ghcr.io/left-curve/left-curve/cross-builder-arm64" >> $GITHUB_OUTPUT
+              elif [[ "${{ runner.os }}" == "Linux" ]]; then
+                # NOTE: I could use a native-builder in such case, but using cross to keep consistency. Also it'd have to be a linux arm64 runner, not a macOS one.
+                echo "image=ghcr.io/left-curve/left-curve/cross-builder-arm64" >> $GITHUB_OUTPUT
+              else
+                echo "Unsupported runner OS for ARM64: OS=${{ runner.os }}, Arch=${{ runner.arch }}"
+                exit 1
+              fi
+            else
+              echo "Unsupported runner: OS=${{ runner.os }}, Arch=${{ runner.arch }}"
+              exit 1
+            fi
+            echo "target=aarch64-unknown-linux-gnu" >> $GITHUB_OUTPUT
+            echo "platform=linux/arm64" >> $GITHUB_OUTPUT
+            echo "suffix=arm64" >> $GITHUB_OUTPUT
           else
-            echo "Unsupported runner: OS=${{ runner.os }}, Arch=${{ runner.arch }}"
-            exit 1
+              echo "Unsupported matrix ${{ matrix.arch }}"
+              exit 1
           fi
-          echo "target=aarch64-unknown-linux-gnu" >> $GITHUB_OUTPUT
-          echo "platform=linux/arm64" >> $GITHUB_OUTPUT
-          echo "suffix=arm64" >> $GITHUB_OUTPUT
 
-      - name: Install cross
-        run: cargo install cross --git https://github.com/cross-rs/cross
+      - run: cargo install cross --git https://github.com/cross-rs/cross
 
-      - name: Write dynamic Cross.toml
-        run: |
+      - run: |
           echo "[target.${{ steps.config.outputs.target }}]" > Cross.toml
           echo "image = \"${{ steps.config.outputs.image }}\"" >> Cross.toml
 
-      - name: Prepare git_info.rs
-        run: |
+      - run: |
           cp dango/cli/src/git_info.rs dango/cli/src/git_info.rs.in
           sed "s/{{GIT_COMMIT}}/${{ env.GIT_COMMIT }}/" dango/cli/src/git_info.rs.in > dango/cli/src/git_info.rs
           rm dango/cli/src/git_info.rs.in
@@ -139,28 +184,15 @@ jobs:
 
       - uses: actions/cache@v4
         with:
-          path: |
-            .cross-cache
+          path: .cross-cache
           key: cross-cache-${{ runner.os }}-${{ steps.config.outputs.target }}-${{ hashFiles('**/Cargo.lock') }}
 
-      - uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cargo/bin/
-            ~/.cargo/registry/index/
-            ~/.cargo/registry/cache/
-            ~/.cargo/git/db/
-            target/
-          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-
-      - name: Build Dango with cross and local cache
-        run: |
+      - run: |
           mkdir -p .cross-cache/${{ steps.config.outputs.target }}
           CROSS_TARGET_CACHE=$(pwd)/.cross-cache/${{ steps.config.outputs.target }} \
           cross build --target ${{ steps.config.outputs.target }} --release
 
-      - name: Build Dango docker image
-        run: |
+      - run: |
           docker buildx build \
             --platform ${{ steps.config.outputs.platform }} \
             --build-arg TARGET_ARCH=${{ steps.config.outputs.target }} \
@@ -170,92 +202,7 @@ jobs:
             -t ghcr.io/left-curve/left-curve/dango:${{ env.GIT_COMMIT }}-${{ steps.config.outputs.suffix }} \
             -f docker/dango/Dockerfile .
 
-  build-amd64:
-    needs: [test]
-    runs-on: [self-hosted]
-    permissions:
-      packages: write
-    steps:
-      - uses: actions/checkout@v4
-
-      - name: Determine build configuration
-        id: config
-        run: |
-          if [[ "${{ runner.arch }}" == "X64" ]]; then
-            echo "image=ghcr.io/left-curve/left-curve/native-builder:amd64" >> $GITHUB_OUTPUT
-            echo "arch=x86_64" >> $GITHUB_OUTPUT
-          elif [[ "${{ runner.arch }}" == "ARM64" ]]; then
-            if [[ "${{ runner.os }}" == "macOS" ]]; then
-              echo "Unsupported runner: OS=${{ runner.os }}, Arch=${{ runner.arch }}, cross doesn't work with this config"
-              exit 1
-            fi
-
-            echo "image=ghcr.io/left-curve/left-curve/cross-builder-amd64" >> $GITHUB_OUTPUT
-            echo "arch=arm64" >> $GITHUB_OUTPUT
-          else
-            echo "Unsupported runner: OS=${{ runner.os }}, Arch=${{ runner.arch }}"
-            exit 1
-          fi
-          echo "target=x86_64-unknown-linux-gnu" >> $GITHUB_OUTPUT
-          echo "platform=linux/amd64" >> $GITHUB_OUTPUT
-          echo "suffix=amd64" >> $GITHUB_OUTPUT
-
-      - name: Install cross
-        run: cargo install cross --git https://github.com/cross-rs/cross
-
-      - name: Write dynamic Cross.toml
-        run: |
-          echo "[target.${{ steps.config.outputs.target }}]" > Cross.toml
-          echo "image = \"${{ steps.config.outputs.image }}\"" >> Cross.toml
-
-      - name: Prepare git_info.rs
-        run: |
-          cp dango/cli/src/git_info.rs dango/cli/src/git_info.rs.in
-          sed "s/{{GIT_COMMIT}}/${{ env.GIT_COMMIT }}/" dango/cli/src/git_info.rs.in > dango/cli/src/git_info.rs
-          rm dango/cli/src/git_info.rs.in
-
-      - uses: docker/setup-buildx-action@v3
-
-      - uses: docker/login-action@v3
-        with:
-          registry: ghcr.io
-          username: ${{ github.actor }}
-          password: ${{ secrets.GITHUB_TOKEN }}
-
-      - uses: actions/cache@v4
-        with:
-          path: |
-            .cross-cache
-          key: cross-cache-${{ runner.os }}-${{ steps.config.outputs.target }}-${{ hashFiles('**/Cargo.lock') }}
-
-      - uses: actions/cache@v4
-        with:
-          path: |
-            ~/.cargo/bin/
-            ~/.cargo/registry/index/
-            ~/.cargo/registry/cache/
-            ~/.cargo/git/db/
-            target/
-          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
-
-      - name: Build Dango with cross and local cache
-        run: |
-          mkdir -p .cross-cache/${{ steps.config.outputs.target }}
-          CROSS_TARGET_CACHE=$(pwd)/.cross-cache/${{ steps.config.outputs.target }} \
-          cross build --target ${{ steps.config.outputs.target }} --release
-
-      - name: Build Dango docker image
-        run: |
-          docker buildx build \
-            --platform ${{ steps.config.outputs.platform }} \
-            --build-arg TARGET_ARCH=${{ steps.config.outputs.target }} \
-            --build-arg GIT_COMMIT=${{ env.GIT_COMMIT }} \
-            --push \
-            --provenance=false \
-            -t ghcr.io/left-curve/left-curve/dango:${{ env.GIT_COMMIT }}-${{ steps.config.outputs.suffix }} \
-            -f docker/dango/Dockerfile .
-
-  build-manifest:
+  push-manifest:
     permissions:
       packages: write
     needs: [build-arm64, build-amd64]
