--- a/docker/optimizer/Dockerfile
+++ b/docker/optimizer/Dockerfile
@@ -1,8 +1,9 @@
 # ------------------------------------ bob -------------------------------------
 
-FROM rust:1.81.0-alpine AS bob
+FROM rust:alpine AS bob
 
-ARG LEFT_CURVE_GIT_COMMIT="bfa46b8"
+ARG GIT_COMMIT=main
+ENV GIT_COMMIT=$GIT_COMMIT
 
 # Download the crates.io index using the new sparse protocol to improve performance
 # and avoid OOM in the build.
@@ -11,10 +12,19 @@ ENV CARGO_REGISTRIES_CRATES_IO_PROTOCOL=sparse
 # Install build dependencies
 RUN apk update && apk add --no-cache git musl-dev
 
-# Download source code
-RUN git clone https://github.com/left-curve/left-curve.git \
+# Download dango source code, build, then delete.
+RUN echo "Cloning commit: $GIT_COMMIT" \
+  && git init left-curve \
   && cd left-curve \
-  && git checkout $LEFT_CURVE_GIT_COMMIT
+  && git remote add origin https://github.com/left-curve/left-curve.git \
+  && git fetch --depth 1 origin $GIT_COMMIT \
+  && git checkout FETCH_HEAD \
+  && cp dango/cli/src/git_info.rs dango/cli/src/git_info.rs.in \
+  && sed "s/{{GIT_COMMIT}}/${GIT_COMMIT}/" dango/cli/src/git_info.rs.in > dango/cli/src/git_info.rs \
+  && rm dango/cli/src/git_info.rs.in \
+  && cargo install --path dango/cli \
+  && cd .. \
+  && rm -rf left-curve
 
 # Compile and install bob
 RUN cd left-curve \
@@ -52,7 +62,7 @@ RUN rm -rf binaryen
 
 # --------------------------------- optimizer ----------------------------------
 
-FROM rust:1.81.0-alpine AS optimizer
+FROM rust:alpine AS optimizer
 
 # Install build dependencies
 RUN apk update && apk add --no-cache musl-dev
