--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -42,22 +42,23 @@ jobs:
           toolchain: nightly
           components: rustfmt
 
-      - uses: actions/cache@v4
-        with:
-          path: |
-            ${HOME}/.cargo/bin/
-            ${HOME}/.cargo/registry/index/
-            ${HOME}/.cargo/registry/cache/
-            ${HOME}/.cargo/git/db/
-            target/
-          key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
+      # This ends up being 8GB and takes 60sec to pull, which is too slow just for formatting.
+      # - uses: actions/cache@v4
+      #   with:
+      #     path: |
+      #       ${HOME}/.cargo/bin/
+      #       ${HOME}/.cargo/registry/index/
+      #       ${HOME}/.cargo/registry/cache/
+      #       ${HOME}/.cargo/git/db/
+      #       target/
+      #     key: ${{ runner.os }}-cargo-${{ hashFiles('**/Cargo.lock') }}
 
       - name: Run rustfmt checks
         run: cargo +nightly fmt --check --all
 
   test:
     needs: [format]
-    name: Test + Lint
+    name: Lint + Test
     runs-on: self-hosted
     env:
       PGDATABASE: grug_test
@@ -164,13 +165,16 @@ jobs:
               exit 1
           fi
 
-      - run: cargo install cross --git https://github.com/cross-rs/cross
+      - name: Install cross
+        run: cargo install cross --git https://github.com/cross-rs/cross
 
-      - run: |
+      - name: Write Cross.toml
+        run: |
           echo "[target.${{ steps.config.outputs.target }}]" > Cross.toml
           echo "image = \"${{ steps.config.outputs.image }}\"" >> Cross.toml
 
-      - run: |
+      - name: Set GIT_COMMIT
+        run: |
           cp dango/cli/src/git_info.rs dango/cli/src/git_info.rs.in
           sed "s/{{GIT_COMMIT}}/${{ env.GIT_COMMIT }}/" dango/cli/src/git_info.rs.in > dango/cli/src/git_info.rs
           rm dango/cli/src/git_info.rs.in
@@ -187,6 +191,10 @@ jobs:
         with:
           path: .cross-cache
           key: cross-cache-${{ runner.os }}-${{ steps.config.outputs.target }}-${{ hashFiles('**/Cargo.lock') }}
+
+      - name: pull cross docker builder image
+        run: |
+          docker pull ${{ steps.config.outputs.image }}
 
       - name: build binary with cross
         run: |
