Allow more archs

--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -113,7 +113,7 @@ jobs:
     # needs: [test]
     strategy:
       matrix:
-        arch: [arm64] # [amd64, arm64]
+        arch: [amd64, arm64]
     permissions:
       packages: write
     steps:
