--- a/.github/workflows/rust.yml
+++ b/.github/workflows/rust.yml
@@ -108,6 +108,8 @@ jobs:
   #         RUST_BACKTRACE: 1
 
   build:
+    fail-fast: false
+    timeout-minutes: 15
     strategy:
       matrix:
         arch: [amd64, arm64]
