--- a/dango/cli/Cargo.toml
+++ b/dango/cli/Cargo.toml
@@ -50,4 +50,8 @@ tracing                 = { workspace = true }
 tracing-subscriber      = { workspace = true }
 
 [dev-dependencies]
-assertor = { workspace = true }
+assertor       = { workspace = true }
+dango-testing  = { workspace = true }
+grug-db-memory = { workspace = true }
+grug-testing   = { workspace = true }
+grug-vm-rust   = { workspace = true }
