--- a/turbo.json
+++ b/turbo.json
@@ -30,6 +30,8 @@
     "NEXT_PUBLIC_FULLPAGE_KEY",
     "PUBLIC_WEBRTC_URI",
     "PUBLIC_SENTRY_DSN",
+    "PUBLIC_FAUCET_URI",
+    "PUBLIC_ENVIRONMENT",
     "SENTRY_ORG",
     "SENTRY_PROJECT",
     "SENTRY_AUTH_TOKEN"
