--- a/.github/workflows/portal-deployment.yaml
+++ b/.github/workflows/portal-deployment.yaml
@@ -46,6 +46,8 @@ jobs:
       - name: Build Portal
         run: pnpm build:portal-web
         env:
+          PUBLIC_ENVIRONMENT: ${{ secrets.PUBLIC_ENVIRONMENT }}
+          PUBLIC_FAUCET_URI: ${{ secrets.PUBLIC_FAUCET_URI }}
           PUBLIC_WEBRTC_URI: ${{ secrets.PUBLIC_WEBRTC_URI }}
           PUBLIC_SENTRY_DSN: ${{ secrets.PUBLIC_SENTRY_DSN }}
           SENTRY_PROJECT: ${{ secrets.SENTRY_PROJECT }}
