--- a/deploy/install-github-runner-hosts.yml
+++ b/deploy/install-github-runner-hosts.yml
@@ -6,8 +6,9 @@
     github_actions_runner_version: "latest"
     github_actions_runner_name_prefix: "runner"
     github_actions_runner_count: "{{ ansible_processor_vcpus }}"
-    github_actions_runner_token: "<your-token>"
     github_actions_runner_url: "https://github.com/left-curve"
     github_actions_runner_workdir: "/home/{{ runner_user }}/_work"
+    github_token: "{{ lookup('env', 'GITHUB_TOKEN') }}"
+    github_org: left-curve
   roles:
     - MonolithProjects.github_actions_runner
